WIP company-mode / LSP stuff to make it not steal my characters

--- a/emacs-config.org
+++ b/emacs-config.org
@@ -279,22 +279,25 @@ Aggressively indent lines because it is (generally) more intuitive.
 	(ivy-mode 1))
     #+END_SRC
 
-#+BEGIN_SRC emacs-lisp
-  (use-package company
-    :diminish "⇥"
-    :config
-    (setq company-idle-delay 0
-	  company-minimum-prefix-length 2)
-    (global-company-mode)
-    (company-tng-configure-default))
-#+END_SRC
+** Auto-completion
+   =company-mode= seems to be the defacto tool, so I'll start with that.
+   #+BEGIN_SRC emacs-lisp
+     (use-package company
+       :diminish "⇥"
+       :init
+       (add-hook 'after-init-hook 'global-company-mode)
+       (setq company-idle-delay 0.5
+	     company-minimum-prefix-length 2)
+       :config
+       (company-tng-configure-default))
+   #+END_SRC
 
-Lets also get a help pop-up when dawdling on an auto-complete suggestion:
-#+BEGIN_SRC emacs-lisp
-  (use-package company-quickhelp
-    :init
-    (company-quickhelp-mode 1))
-#+END_SRC
+   Lets also get a help pop-up when dawdling on an auto-complete suggestion:
+   #+BEGIN_SRC emacs-lisp
+     (use-package company-quickhelp
+       :init
+       (company-quickhelp-mode 1))
+   #+END_SRC
 
 ** Emoji
 
@@ -344,28 +347,31 @@ Sometimes remembering all the key bindings is really hard...
    The Language Server Protocol is devleoped by Microsoft to provide more conventional IDE-like features to editors without needing to write a custom, complex backend.
    Instead, one only needs to write a client for the desired language's language server.
 
-#+BEGIN_SRC emacs-lisp
-  (use-package lsp-mode
-    :ensure t
-    :pin melpa-stable
-    :init
-    ;; make sure we have lsp-imenu everywhere we have LSP
-    (require 'lsp-imenu)
-    (add-hook 'prog-major-mode #'lsp-prog-major-mode-enable))
+   #+BEGIN_SRC emacs-lisp
+     (use-package lsp-mode
+       :ensure t
+       :pin melpa-stable
+       :init
+       ;; make sure we have lsp-imenu everywhere we have LSP
+       (require 'lsp-imenu)
+       (add-hook 'prog-major-mode #'lsp-prog-major-mode-enable))
 
-  (use-package lsp-ui
-    :ensure t
-    :init
-    (setq lsp-ui-sideline-ignore-duplicate t)
-    (add-hook 'lsp-mode-hook #'lsp-ui-mode))
-#+END_SRC
+     (use-package lsp-ui
+       :ensure t
+       :init
+       (setq lsp-ui-sideline-ignore-duplicate t)
+       (add-hook 'lsp-mode-hook #'lsp-ui-mode))
+   #+END_SRC
 
-You can also use =company-mode= with LSP:
-#+BEGIN_SRC emacs-lisp
-  (use-package company-lsp
-    :init
-    (push 'company-lsp company-backends))
-#+END_SRC
+   You can also use =company-mode= with LSP:
+   #+BEGIN_SRC emacs-lisp
+     (use-package company-lsp
+       :init
+       (push 'company-lsp company-backends)
+       (setq company-lsp-async t
+	     company-lsp-cache-candidates 'auto
+	     company-lsp-enable-recompletion t))
+   #+END_SRC
 
 ** Language support
    TODO, because there's too many...
